# sortdir

./: .gitignore  LICENSE  README.md  README.org  flake.nix  pyproject.toml
sortdir/: __init__.py  __main__.py  cli.py  config.py  sorting.py  utils.py
