[tool.poetry]
name = "sortdir"
version = "0.1.0"
description = ""
authors = ["Yevhen Shymotiuk <yevhenshymotiuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^2.1.2"

[tool.poetry.dev-dependencies]
pipx = "^0.16.3"
pylint = "^2.8.3"

[tool.poetry.scripts]
sortdir = "sortdir:__main__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
