[tool.poetry]
name = "sortdir"
version = "0.2.0"
description = "Sorting directory files made easy."
authors = ["Yevhen Shymotiuk <yevhenshymotiuk@gmail.com>"]
license = "MIT"

readme = "README.org"

repository = "https://github.com/yevhenshymotiuk/sortdir"

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^2.1.2"
colorama = "^0.4.4"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pipx = "^0.16.3"
pylint = "^2.8.3"
twine = "^3.4.1"
ipdb = "^0.13.9"

[tool.poetry.scripts]
sortdir = "sortdir:__main__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
